# ecommerce_chatbot

./: .env  .env.copy  README.md  get_lib_version.py  get_lib_version_py  main.py  pyproject.toml  requirements.txt  streamlit_ui.py
data/: product_reviews.csv
notebook/: test.ipynb
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/logger/: __init__.py
prod_assistant/prompt_library/: prompts.py
prod_assistant/retriever/: retrieval.py
prod_assistant/utils/: model_loader.py
prod_assistant/workflow/: generation_workflow.py
