[project]
name = "ecommerce-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
]

# Optional: authors , license 
authors = [{name = "Suel Abbasi"}]
license = { text = "Proprietary"}

# Optional: CLI command (python -m pip install -e .)
[project.scripts]
ecommerce-chatbot = "prod_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["prod_assistant"]
include = ["prod_assistant*"]